# apnoea_bradycardia_desaturation

./: README.md  pyproject.toml
data/: data_sample.csv
scr/: sampling.py
scr/ABD_prediction/: __init__.py  preprocessing.py  splitting.py  training_and_testing.py
scr/stratified_analysis/: __init__.py  labels.py  models.py  pipeline.py  plots.py  resampling.py  windows.py
scripts/: run_stratified_analysis.py  xbg_example.py
